--- a/01_Jarvis.ipynb
+++ b/01_Jarvis.ipynb
@@ -25,12 +25,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "BeHCgP_uJEGh"
       },
       "outputs": [],
       "source": [
+        "%%capture\n",
         "!pip install langchain\n",
         "!pip install pypdf\n",
         "!pip install pinecone-client\n",
@@ -64,7 +65,7 @@
       "metadata": {
         "id": "fXNXgOhlJmDk"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -79,12 +80,12 @@
     {
       "cell_type": "code",
       "source": [
-        "c_root = 'content/drive/MyDrive/Jarvis'"
+        "# c_root = 'content/drive/MyDrive/Jarvis'"
       ],
       "metadata": {
         "id": "LXqxPq8cJ_4b"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -143,7 +144,7 @@
       "metadata": {
         "id": "hy69keWjJ4lD"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -165,7 +166,7 @@
       "metadata": {
         "id": "xthTRgISMYg1"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -180,21 +181,22 @@
         "\n",
         "for q in processed_questions:\n",
         "    a = get_response(searchable_docs, qa_chain, q)\n",
-        "    print(f'Question : {q}\\nAnswer : {a}\\n\\n')\n"
+        "    print(f'\\nQuestion : {q}\\nAnswer : {a}\\n')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hxFUSkTbVYwi",
-        "outputId": "e9e22464-058f-4446-f8bb-a70ef7ddf138"
+        "outputId": "75b1b83c-c2ca-4356-c014-83f3ce2892fd"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
             "Question : Who is the father of Tony Stark?\n",
             "Answer : Howard Stark was the father of Tony Stark.\n",
             "\n",
